added picture upload functionality but it doesn't save to the server yet

--- a/Alllive/Views/Shared/_Layout.cshtml
+++ b/Alllive/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     <li>@Html.ActionLink("Start Meeting", "StartMeeting", "Navigation")</li>
                     <li>@Html.ActionLink("Distance Learning", "DistanceLearning", "Navigation")</li>
                     <li>@Html.ActionLink("Online Childrens Yoga", "OnlineYoga", "Navigation")</li>
-                    <li>@Html.ActionLink("Search", "SearchTutor", "Search")</li>
+                    <li>@Html.ActionLink("Search Tutors", "SearchTutor", "Search")</li>
 
 
 
