--- a/Alllive/Views/User/ViewProfile.cshtml
+++ b/Alllive/Views/User/ViewProfile.cshtml
@@ -26,7 +26,7 @@
     @if (Model.TutorProfile!=null)
     {
         <p>
-            <img />PHOTO
+            <img src="~/Images/silhoutte.png"/>
         </p>
         <p>
             @Model.TutorProfile.Bio;
